<resources>
    <string name="app_name">Pixiv (beta)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="action_cloud">Cloud</string>
    <string name="action_delete_all">删除全部</string>
    <string name="action_view_detail">查看详情</string>
    <string name="original">原图:%spx*%spx</string>
    <string name="date_is">日期:%s</string>
    <string name="illust_id">作品ID：%s</string>
    <string name="author_id">画师ID：%s</string>
    <string name="author_is">作者：%s</string>
    <string name="action_edit">编辑</string>
    <string name="download">下载原图</string>
    <string name="more_files">TA的主页</string>
    <string name="author_works">作品</string>
    <string name="author_follow">关注: %s</string>
    <string name="author_followers">粉丝: %s</string>
    <string name="string_author">画师：%s</string>
    <string name="string_author_detail">%s的个人主页</string>
    <string name="string_full_size">原图尺寸：%dpx*%dpx</string>
    <string name="string_create_time">投稿时间：%s</string>
    <string name="string_viewd">%sK</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scroll">ScrollActivity</string>
    <string name="ceuilisa">未登录</string>
    <string name="fatemercis">没有什么能展示的</string>
    <string name="main_card_title">Title goes here</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="tool_bar_title_one">Pixiv</string>
    <string name="tool_bar_title_two">Hitokoto</string>
    <string name="tool_bar_title_three">Mine</string>
    <string name="main_flat_button_1_clicked">Flat Button 1</string>
    <string name="main_flat_button_2_clicked">Flat Button 2</string>
    <string name="hitokoto_test_text">我手中的魔法，是守护挚爱的力量，是坚定这个信念所必须的力量，我一定会拯救你的，无论在何时、何地。</string>
    <string name="hitokoto_test_author">奈叶酱</string>
    <string name="hitokoto_test_source">魔法少女奈叶</string>
    <string name="hitokoto_test_date">2011.10.19 12:42:00</string>
    <string name="hitokoto_test_catname">Anime - 动画</string>
    <string name="like_it">下一个</string>
    <string name="collect_it">收藏</string>
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="tv_recycler_item_1">Swipe down to refresh</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it and I will do some overhere</string>
    <string name="title_activity_share_view">Share View</string>
    <string name="share_view_press_it">You can press it</string>
    <string name="no_more_data">No more data</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="arclayout_description">九条可怜（Kujou Karen），漫画《黄金拼图》及其衍生作品中的女主角之一。日本人和英国人的混血少女。金发、灰色瞳孔的少女。和爱丽丝·卡塔雷特是青梅竹马。因为好奇日本而追随爱丽丝来到日本留学。制服的衬衫和其他4个人不同，并披着英国国旗花纹的外套。个性开朗好相处，很快就习惯了日本的学校生活。经常故意装傻而被吐嘈</string>
    <string name="arclayout_development">日本的女性声优、歌手，东京都出身，所属事务所为INTENTION，唱片公司为FlyingDog。代表作有《只有神知道的世界》中川花音、《异国迷宫的十字路口》汤音、《天才麻将少女阿知贺篇 episode of side-A》新子憧、《我的青春恋爱物语果然有问题》由比滨结衣、《打工吧！魔王大人》佐佐木千穗、《黄金拼图》九条可怜、《伪恋》桐崎千棘、《舰队Collection》金刚、《GATE 奇幻自卫队》蕾莱·拉·列娜、《爆音少女！！》铃乃木凛、《魔法少女育成计划》白雪等。\n\n另： 只有东山大法的声音才能抚慰我受伤的心灵...</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from_where all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from_where 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="string_rank">排行榜</string>
    <string name="get_more_files">查看更多</string>
    <string name="special">特辑</string>
    <string name="password">密码</string>
    <string name="pixiv_name">pixiv用户名/邮箱</string>
    <string name="dont_have_account">没有账号？</string>
</resources>