<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/relative_one"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_rank"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/sixteen_dip"
            android:src="@drawable/ic_equalizer_black_24dp_new" />

        <TextView
            android:id="@+id/text_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight_dip"
            android:layout_toEndOf="@+id/img_rank"
            android:text="@string/string_rank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight_dip"
            android:layout_toStartOf="@+id/img_get_more"
            android:text="@string/get_more_files"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/img_get_more"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_navigate_next_black_24dp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recy_rank_shortnap"
        android:layout_width="wrap_content"
        android:layout_below="@+id/relative_one"
        android:layout_height="140dp">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/relative_two"
        android:layout_below="@+id/recy_rank_shortnap"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_special"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/sixteen_dip"
            android:src="@drawable/ic_equalizer_black_24dp_new" />

        <TextView
            android:id="@+id/text_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight_dip"
            android:layout_toEndOf="@+id/img_special"
            android:text="@string/special" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight_dip"
            android:layout_toStartOf="@+id/img_get_more_two"
            android:text="@string/get_more_files"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/img_get_more_two"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_navigate_next_black_24dp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recy_special_shortnap"
        android:layout_width="wrap_content"
        android:layout_below="@+id/relative_two"
        android:layout_height="140dp">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>