<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196f3"
    tools:context=".activities.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:fitsSystemWindows="true"
        app:navigationIcon="@drawable/ic_arrow_back_black_two_24dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title=" " />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/sixteen_dip"
        android:layout_marginTop="100dp"
        android:src="@mipmap/login_logo" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_pixiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@animator/touch_raise"
        app:cardCornerRadius="@dimen/card_recycler_elevation"
        app:cardElevation="@dimen/card_recycler_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pixiv_name"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_username"
                android:layout_marginTop="@dimen/eight_dip"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/card_pixiv"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@animator/touch_raise"
        app:cardCornerRadius="@dimen/card_recycler_elevation"
        app:cardElevation="@dimen/card_recycler_elevation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="登录"
            android:textColor="#2196f3"
            android:textSize="17sp" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/card_login"
        android:layout_below="@+id/card_login"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sixteen_dip"
        android:text="@string/dont_have_account"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/try_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

</RelativeLayout>